# notification-scheduler

./: .gitignore  Cargo.toml  Makefile  api.Dockerfile  cargo.toml  docker-compose.yml  email_consumer.Dockerfile  push_consumer.Dockerfile  rustfmt.toml
api/: Cargo.toml  docker-compose.yml
api/src/: app.env  app_state.rs  main.rs
api/src/api/: common.rs  mod.rs  notifications.rs
api/src/comms/: broker.rs
api/src/crone/: mod.rs  scheduler.rs
api/src/data/: db.rs  mod.rs  notifications.rs
api/src/messaging/: broker.rs
api/src/monitoring/: metrics.rs
api/src/server/: server.rs
api/src/services/: notifications.rs
api/src/utils/: errors.rs  mod.rs  notifications.rs  types.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/monitoring/: metrics.rs  mod.rs  server.rs
email_consumer/: Cargo.toml  app.env  docker-compose.yml
email_consumer/src/: app_state.rs  main.rs
email_consumer/src/consumer/: service.rs
email_consumer/src/handler/: mod.rs
email_consumer/src/metrics/: metrics.rs
email_consumer/src/server/: consumer.rs
push_consumer/: Cargo.toml  app.env
push_consumer/src/: app_state.rs  main.rs
push_consumer/src/consumer/: service.rs
push_consumer/src/handler/: std_out.rs
push_consumer/src/metrics/: metrics.rs
