[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

# env
dotenvy = "0.15.7"

# server
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"]}

# kafka
rdkafka = { version = "0.37.0", features = ["tokio"] }

# serde
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# mongodb
mongodb = "3.2.3"

# prometheus
prometheus = "0.14"
axum-prometheus = "0.8.0"

# utils
chrono = "0.4.38"
thiserror = "2.0.12"
async-trait = "0.1.88"
lazy_static = "1.4"
futures = "0.3.31"

[dev-dependencies]
anyhow = "1.0.82"
httpc-test = "0.1.9"