[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

# env
dotenvy = "0.15.7"

# server
axum = { version = "0.8.3", features = ["macros"] }

# serde
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

async-nats = "0.40.0"

# mongodb
mongodb = "3.2.3"

# prometheus
common = { path = "../common" }

# utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
futures = "0.3.31"
rand = "0.9.0"

[dev-dependencies]