[package]
name = "email_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.37.0", features = ["tokio"] }
tokio = { version = "1.37.0", features = ["full"]}
axum = { version = "0.8.3", features = ["macros"] }

async-trait = "0.1.88"
dotenvy = "0.15.7"
futures = "0.3.31"

common = { path = "../common" }
prometheus = { version = "0.14.0" }
async-nats = "0.40.0"