[package]
name = "email_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37.0", features = ["full"]}
axum = { version = "0.8.3", features = ["macros"] }

dotenvy = "0.15.7"
futures = "0.3.31"

common = { path = "../common" }
async-nats = "0.40.0"
log = "0.4"
env_logger = "0.11.8"